Fix product browse image distortion.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -434,8 +434,10 @@ nav {
     }
 
     .product_pic {
-        width: 250px;
-        height: 250px;
+        width: auto;
+        height: auto;
+        max-width: 250px;
+        max-height: 250px;
         padding: 20px;
         box-sizing: border-box;
 
